--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,7 +23,7 @@
                     <h1 class="navbar-brand">
 			<a href="/en/">
                             <span class="sr-only"></span>
-                            <img src="static/img/logo.svg" alt="" height="35" />
+                            {# <img src="static/img/logo.svg" alt="" height="35" /> #}
 			</a>
                     </h1>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".js-navbar-header">
@@ -31,40 +31,21 @@
                     </button>
 		</div>
 
-		<h2 class="sr-only">Shortcuts</h2>
-		<ul class="skip-links">
-                    <li><a href="/en/" title="[Alt + 0]" accesskey="0">Go to home</a></li>
-                    <li><a href="#page-navigation" title="[Alt + 1]" accesskey="1">Jump to navigation</a></li>
-                    <li><a href="#page-content" title="[Alt + 2]" accesskey="2">Jump to content</a></li>
-                    <li><a href="#page-footer" title="[Alt + 3]" accesskey="3">Contact</a></li>
-		</ul>
-
 		<div class="navbar-collapse collapse js-navbar-header">
                     <nav class="nav navbar-main navbar-right" id="page-navigation" role="navigation">
                         <h2 class="sr-only">Navigation</h2>
                         <ul class="nav navbar-nav">
 			    <li class="child active first">
-				<a href=""><span>Home</span></a></li>
+				<a href="/index.html"><span>Home</span></a></li>
 
 			    <li class="child children dropdown">
 				<a href="" class="dropdown-toggle" data-toggle="dropdown">
 				    <span>Menu<span class="caret"></span> </span> </a>
 				<ul class="dropdown-menu" role="menu">
-				    <li class="child first">
-					<a href=""> <span>Menu 1</span></a></li>
-				    <li class="child">
-					<a href=""><span>Menu 2</span></a></li>
-				</ul>
-			    </li>
-
-			    <li class="child last">
-				<a href=""><span>Blog</span></a></li>
-
-                            <li class="divider" role="presentation"><span class="sr-only">Separator</span></li>
-			    <li class="child lang dropdown">
-				<a href="/en/" class="dropdown-toggle" data-toggle="dropdown"><span>English <span class="caret"></span></span></a>
-				<ul class="dropdown-menu" role="menu">
-				    <li class="child lang"><a href="/fr/"><span>Français</span></a></li>
+				    {% for item in menus %}
+					<li class="child first">
+					    <a href="{{ item['href'] }}"><span>{{ item['title'] }}</span></a></li>
+				    {% endfor %}
 				</ul>
 			    </li>
                         </ul>
