added explanation text

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -67,7 +67,10 @@
                     <li class="pull-right"><a href="#page-top" data-spy="scroll"><span class="fa fa-left fa-arrow-up"></span> Back to top</a></li>
                 </ul>
 		<div class="col-sm-16">
-                    <p>CopyRight © 2016 Demo CSS</p>
+                    <p>Copyright © 2016 <a href="https://github.com/FabriceSalvaire/css-demo">CSS Demo</a>
+			/ <a href="https://github.com/FabriceSalvaire" itemscope itemtype="http://schema.org/People">
+			<span itemprop="author">Fabrice Salvaire</span></a>
+			/ <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC by-nc-na</a></p>
 		</div>
             </div>
 	</footer>
