Added introduction and material pages

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,7 +3,7 @@
     <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title> Home </title>
+	<title> CSS Demo </title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="description" content="None">
 	<link rel="apple-touch-icon" href="static/favicon.png">
@@ -17,7 +17,7 @@
     </head>
 
     <body id="page-top" class="noscript lang-en tpl-fullwidth">
-	<header class="navbar navbar-head navbar-inverse">
+	<header class="navbar navbar-head navbar-inverse material-rised">
             <div class="container">
 		<div class="navbar-header">
                     <h1 class="navbar-brand">
@@ -36,7 +36,7 @@
                         <h2 class="sr-only">Navigation</h2>
                         <ul class="nav navbar-nav">
 			    <li class="child active first">
-				<a href="/index.html"><span>Home</span></a></li>
+				<a href="index.html"><span>Home</span></a></li>
 
 			    <li class="child children dropdown">
 				<a href="" class="dropdown-toggle" data-toggle="dropdown">
