--- a/private/sass/sites/_custom.scss
+++ b/private/sass/sites/_custom.scss
@@ -84,3 +84,54 @@
     font-weight: 300; // 200
   }
 }
+
+.material-rised {
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+a.material-floating-button {
+    @extend .material-rised;
+
+    // from Bootstrap
+    display: inline-block;
+    margin-bottom: 0; // For input.btn
+    font-weight: $btn-font-weight;
+    text-align: center;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+    border: 0px solid transparent;
+    white-space: nowrap;
+    @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $btn-border-radius-base);
+
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    border-color: rgba(0,0,0,0);
+    border-width: 0px;
+    background-color: hsl(350, 85%, 55%);
+    color: white;
+
+    &:hover {
+	background-color: hsl(350, 85%, 60%);
+	color: white;
+    }
+
+    &:active {
+	 // none 	Default value. No shadow is displayed
+	 // h-shadow 	Required. The position of the horizontal shadow. Negative values are allowed
+	 // v-shadow 	Required. The position of the vertical shadow. Negative values are allowed
+	 // blur 	Optional. The blur distance
+	 // spread 	Optional. The size of shadow. Negative values are allowed
+	 // color 	Optional. The color of the shadow. The default value is black. Look at CSS Color Values for a complete list of possible color values.
+	 // Note: In Safari (on PC) the color parameter is required. If you do not specify the color, the shadow is not displayed at all.
+	// inset 	Optional. Changes the shadow from an outer shadow (outset) to an inner shadow
+	// initial 	Sets this property to its default value. Read about initial
+	// inherit 	Inherits this property from its parent element. Read about inherit
+	// box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16) inset, 0 2px 10px 0 rgba(0,0,0,0.12) inset;
+	box-shadow: 0 2px 15px 0 rgba(0,0,0,3*0.16), 0 2px 30px 0 rgba(0,0,0,3*0.12);
+    }
+}
